workloads/openclaw/openclaw-app/openclaw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
  labels:
    app: openclaw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclaw
  strategy:
    type: Recreate # Required if using ReadWriteOnce PVCs across node changes
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      containers:
        - name: openclaw
          image: ghcr.io/bapttf/openclaw-lea-config:sha-3693ebf74f97cee3fce5b92ae80c03f059b14a05
          resources:
            requests:
              cpu: "50m"
              memory: "512Mi"
            limits:
              cpu: "2000m"         
              memory: "3Gi"
          ports:
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: openclaw-home
              mountPath: /home
      securityContext:
        fsGroup: 1000
      volumes:
        - name: openclaw-home
          persistentVolumeClaim:
            claimName: openclaw-home-pvc
